# libxm

./: CMakeLists.txt
include/: xm.h
src/: play.c
